--- a/fireplace.ipynb
+++ b/fireplace.ipynb
@@ -83,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'inputs': [{'inputType': 'String', 'name': 'HelloWorld.hello_world_string', 'optional': False}, {'inputType': 'String', 'name': 'HelloWorld.hello_world_string2', 'optional': False}], 'outputs': [{'name': 'HelloWorld.echo.out', 'outputType': 'String'}]}\n"
+     ]
+    }
+   ],
    "source": [
     "getstuff(namespace, workspace)"
    ]
