Write input files

--- a/fireplace.ipynb
+++ b/fireplace.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'methodRepoMethod': {'methodName': 'hello-world',\n   'methodVersion': 2,\n   'methodNamespace': 'fleharty',\n   'methodUri': 'agora://fleharty/hello-world/2',\n   'sourceRepo': 'agora'},\n  'name': 'hello-world',\n  'namespace': 'fleharty',\n  'rootEntityType': 'participant'}]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "methodUri = configs.json()[\"methodRepoMetho\"]\n",
+    "methodUri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'workflow HelloWorld {\\n\\n\\tString hello_world_string\\n  \\tString hello_world_string2\\n\\n  \\n  \\tcall echo { \\n  \\t\\tinput: s = hello_world_string, \\n               s2= hello_world_string2\\n\\t}\\n}\\n\\ntask echo {\\n\\n\\tString s\\n    String s2\\n\\n\\tcommand {\\n    \\techo ${s}!\\n        echo And ${s2}!\\n    }\\n    runtime {\\n    \\tdocker: \"ubuntu\"\\n        cpu: 1\\n        disks: \"local-disk 1 HDD\"\\n        noAddress: true\\n    }\\n    output {\\n    \\tString out = read_string(stdout())\\n    }\\n}'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fapi.get_repository_method(\"fleharty\", \"hello-world\", 2).json()[\"payload\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
